# open-reporting

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AUTH.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  prd.json  progress.txt  skills-lock.json
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy-docs.yml  main.yml  publish-sdk.yml
archive/2026-03-26-sdk-alignment/: prd.json  progress.txt
archive/2026-03-26-slideshow-theming/: prd.json  progress.txt
archive/2026-03-26-theming-quality-coaching/: prd.json  progress.txt
backend/: .env.example  .gitignore  Dockerfile  README.md  debug_search.py  err.txt  fix_db.py  pyproject.toml  requirements.txt  verify_schema.py
backend/app/: database.py  main.py  models.py  seed.py
backend/app/auth/: dependencies.py  providers.py  security.py
backend/app/core/: authoring_coach.py  cache.py  chart_validation.py  config.py  html_validator.py  llm_review.py  notifications.py  rate_limit.py  renderers.py  storage.py  svg_charts.py  tags.py  tasks.py  themes.py
backend/app/routes/: agents.py  auth.py  capabilities.py  curation.py  notifications.py  oauth.py  reports.py  search.py  showcase.py  spaces.py  tags.py  users.py
backend/seed/: board-strategy-h1.html  engineering-velocity.html  incident-payment-outage.html  market-analysis-saas-payments.html  q1-competitive-landscape.html  weekly-business-review.html
backend/tests/: conftest.py  test_main.py  test_validator.py
docs-site/: README.md  docusaurus.config.ts  next.config.mjs  package-lock.json  package.json  source.config.ts
docs-site/app/: global.css  layout.tsx
docs-site/app/(home)/: page.tsx
docs-site/content/docs/: index.mdx  intro.md  meta.json  repository-overview.mdx
docs-site/docs/how-to/: config-env.md
docs-site/docs/reference/: api.md
docs-site/lib/: layout.shared.tsx  source.ts
docs/superpowers/specs/: 2026-03-23-design-polish-design.md  2026-04-01-bc-agents-publishing-design.md  (+1 more)
frontend/: .env.example  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx  types.ts
frontend/src/components/: CodeBlock.tsx  (+14 more)
sdk/: README.md  pyproject.toml
sdk/openreporting/: __init__.py  capabilities.py  chat.py  cli.py  client.py  exceptions.py  fastapi.py  models.py  prompts.py  scaffold.py  sections.py  utils.py  validation.py
sdk/openreporting/studio/: agent_loader.py  helpers.py  server.py  ui.html
sdk/python/: pyproject.toml
sdk/python/openreporting/: __init__.py  client.py  models.py  sections.py
sdk/tests/: test_helpers.py  test_scaffold_multifile.py
skills/open-reporting-skill/: SKILL.md
(+74 files in other folders)
