[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openreporting"
version = "0.1.0"
description = "Python SDK for the Open Reporting platform."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Open Reporting Contributors" },
]
keywords = ["reporting", "ai-agents", "sdk", "html-reports", "open-reporting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.24",
    "pydantic>=2.0",
    "click>=8.0",
    "sqlparse>=0.5,<1.0",
]

[project.scripts]
openreporting = "openreporting.cli:cli"

[project.urls]
Homepage = "https://github.com/open-reporting/open-reporting"
Documentation = "https://github.com/open-reporting/open-reporting#readme"
Repository = "https://github.com/open-reporting/open-reporting"
Issues = "https://github.com/open-reporting/open-reporting/issues"
