[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openreporting"
version = "0.1.0"
description = "Python SDK for the Open Reporting platform."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/open-reporting/open-reporting"
Documentation = "https://github.com/open-reporting/open-reporting#readme"
Repository = "https://github.com/open-reporting/open-reporting"
